[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_localfolder = "apps,utils,tests,tapa_on"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "python-iugu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8.2"
deserialize = "*"
requests = "*"


[tool.poetry.dev-dependencies]
